--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,515 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* ----- General styles ----- */
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0 0 70px;
+  font-family: 'Muli';
+  background-color: #22263B;
+  color: #FFFFFF;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Ovo';
+  color: #8EC9D2;
+}
+
+section {
+  margin: 30px;
+}
+
+.mobile-footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  padding: 35px 0 45px 0;
+  background-color: #6C979E;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.fa {
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+}
+
+.content-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navbar > a:hover,
+.contact-form > button:hover {
+  background-color: #8DC9D2;
+}
+
+.hide-text {
+  display: none;
+}
+
+/* ----- Navigation styles ----- */
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+  margin-top: 15px;
+}
+
+.desktop-site-title {
+  display: none;
+}
+
+.desktop-site-socials {
+  display: none;
+}
+
+.about-btn,
+.projects-btn,
+.contact-btn,
+.not-found-btn,
+.error-page-btn {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: #FFFFFF;
+  background-color: #6C979E;
+  padding: 5px 15px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.nav-hr {
+  width: 70%;
+}
+
+/* ----- About Page styles ----- */
+
+.about-header {
+  font-size: 32px;
+  margin-top: 0;
+}
+
+.about-subtitle,
+.projects-subtitle,
+.contact-subtitle {
+  font-size: 20px;
+}
+
+.headshot {
+  width: 170px;
+  border: 4px solid lightgray;
+  border-radius: 50%;
+  margin: 20px 0 20px;
+}
+
+.biography {
+  margin-bottom: 60px;
+}
+
+/* ----- Projects Page styles ----- */
+
+.projects-header {
+  font-size: 32px;
+  margin-top: 0;
+}
+
+.projects-subtitle {
+  margin-bottom: 30px;
+}
+
+.projects-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.project-item {
+  border: 2px solid #FFFFFF;
+  background-color: #222222;
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  margin-bottom: 60px;
+}
+
+.app-preview {
+  width: 100%;
+  border-radius: 3px;
+}
+
+.technologies {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.technologies i {
+  font-size: 40px;
+}
+
+.technologies .fa-html5 {
+  color: #E44E2A;
+}
+
+.technologies .fa-css3-alt {
+  color: #0070B7;
+}
+
+.technologies .fa-js-square {
+  color: #F0DB4F;
+}
+
+.technologies .fa-git-alt {
+  color: #EB5032;
+}
+
+.technologies .fa-react {
+  color: #00D9FF;
+}
+
+.technologies .fa-node-js {
+  color: #3C873A;
+}
+
+.technologies .fa-database {
+  color: #52489C;
+}
+
+.technologies .ts-icon {
+  font-size: 40px;
+  color: #FF8300;
+}
+
+.github-links {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 30px;
+}
+
+.github-links a {
+  text-decoration: none;
+  text-align: right;
+  margin: 5px;
+}
+
+.github-links i {
+  color: #FFFFFF;
+}
+
+.coming-soon {
+  color: #FFFFFF;
+  margin: 0 auto 40px;
+}
+
+/* ----- Contact Me styles ----- */
+
+.contact-header {
+  width: 90%;
+  margin-bottom: 30px;
+}
+
+.contact-header a {
+  text-decoration: none;
+  color: #8DC9D3;
+  cursor: pointer;
+}
+
+.contact-title {
+  font-size: 32px;
+  margin-top: 0;
+}
+
+.contact-form {
+  width: 100%;
+}
+
+.contact-form legend{
+  display: none;
+}
+
+.contact-form input,
+.contact-form textarea {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 8px;
+  border: none;
+  border-radius: 3px;
+  font-family: 'Muli';
+}
+
+.contact-form button {
+  display: block;
+  margin: 20px auto 30px;
+  padding: 20px 40px;
+  border: none;
+  border-radius: 3px;
+  background-color: #6C979E;
+  color: #FFFFFF;
+  font-family: 'Muli';
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* ----- Not Found Styles -----  */
+
+.not-found-section header {
+  text-align: center;
+}
+
+.not-found-emoji {
+  font-size: 80px;
+  margin: 20px auto;
+}
+
+/* ----- Error Page Styles ----- */
+
+.error-page-container {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.error-page-container h2 {
+  width: 300px;
+}
+
+/* ----- Tablet Compatibility ----- */
+
+@media screen and (min-width:600px) {
+  /* About Page styles */
+
+  .about-subtitle {
+    max-width: 470px;
+  }
+  
+  .biography {
+    max-width: 540px;
+  }
+
+  /* Projects Page styles */
+
+  .projects-list {
+    max-width: 500px;
+  }
+
+  .project-item > h2,
+  .project-item > p {
+    padding: 0 15px 0;
+  }
+
+  .projects-header,
+  .projects-subtitle {
+    max-width: 470px;
+  }
+
+  /* Contact form Styles */
+
+  .contact-header {
+    width: 470px;
+  }
+
+  .contact-form {
+    width: 500px;
+  }
+}
+
+/* ----- Laptop Compatibility ----- */
+
+@media screen and (min-width: 1024px) {
+  /* General styles */
+
+  main {
+    height: 100vh;
+  }
+  
+  .content-section {
+    margin-top: 40px;
+    margin-left: 30%;
+  }
+
+  body {
+    font-size: 1.1rem;
+    padding: 30px;
+  }
+
+  /* Navbar styles */
+
+  nav.navbar {
+    float: left;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 70vh;
+    width: 30%;
+    border-right: 1px solid #6C979E;
+  }
+
+  .nav-hr {
+    display: none;
+  }
+
+  .navbar a {
+    font-size: 28px;
+  }
+
+  .desktop-site-title {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .desktop-site-title h2 {
+    font-size: 2.5rem;
+    color: #FFFFFF;
+  }
+
+  .navbar > a {
+    font-size: 1.2em;
+    padding: 12px 40px;
+  }
+
+  .desktop-site-socials {
+    display: block;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    margin-top: 40px;
+  }
+
+  .desktop-site-socials .fa {
+    color: #FFFFFF;
+  }
+
+  .desktop-site-title h2 {
+    margin-bottom: 0;
+  }
+
+  /* About page styles */
+
+  .headshot {
+    width: 220px;
+  }
+
+  .about-header,
+  .projects-header,
+  .contact-title {
+    font-size: 3rem;
+  }
+
+  /* Projects Page styles */
+
+  .projects-subtitle {
+    margin: 0 0 40px;
+  }
+
+  /* Contact Page styles */
+
+  label {
+    font-size: 1.3rem;
+  }
+
+  input,
+  textarea {
+    font-size: 1rem;
+  }
+
+  /* Not Found styles */
+
+  .not-found-section {
+    padding-top: 100px;
+  }
+
+  /* Error Page styles */
+
+  .error-page-container {
+    margin-left: 30%;
+  }
+
+  /* Footer styles */
+  
+  .mobile-footer {
+    display: none;
+  }
+}
+
+/* ----- Large Desktop compatibility ----- */
+
+@media screen and (min-width: 1440px) {
+  body {
+    font-size: 1.3rem;
+  }
+
+  /* About Page styles */
+
+  .about-subtitle {
+    max-width: 700px;
+  }
+  
+  .biography {
+    max-width: 800px;
+  }
+
+  /* Projects Page styles */
+
+  .projects-header,
+  .projects-subtitle {
+    max-width: 700px;
+  }
+
+  .projects-list {
+    max-width: 730px;
+  }
+
+  .technologies i {
+    font-size: 60px;
+  }
+
+  .github-links i {
+    font-size: 50px;
+  }
+
+  .technologies .ts-icon {
+    font-size: 60px;
+  }
+
+  .psql-icon {
+    content: url("https://img.icons8.com/color/60/000000/postgreesql.png");
+  }
+
+  /* Contact form Styles */
+
+  .contact-form {
+    width: 700px;
+  }
+
+  .contact-header {
+    width: 600px;
+  }
+
+  label {
+    font-size: 1.3rem;
+  }
+
+  input,
+  textarea {
+    font-size: 1rem;
+  }
 }
